# model

./: CMakeLists.txt  deps.json  package.xml
CartWalk/: CartWalk.cpp  CartWalk.h  CartWalkProxy.hpp  linear_algebra.h  math_basics.cpp  math_basics.h  math_log.cpp  math_log.h
Experiments/: CMakeLists.txt
Experiments/CartWalkGradientOptim/: main.cpp
Experiments/Utils/: MotionCapture.cpp  MotionCapture.hpp  SDKConnection.cpp  SDKConnection.hpp
Model/: CameraModel.cpp  CameraModel.hpp  HumanoidModel.cpp
automated_tests/: CameraModel.cpp
